--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,12 +7,12 @@
     "**/.vscode": true,
     "**/__pycache__": true,
     "**/.pytest_cache": true,
-    "**/node_modules": true,
-    "node_modules": true,
+    "**/node_modules": false,
+    "node_modules": false,
     "venv": true,
     "*.sublime-*": true,
     "env*": true,
-    "dist": true,
+    "dist": false,
     "**/.svn": true,
     "**/.hg": true,
     "**/CVS": true
