--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "@angular/forms": "~8.1.0",
     "@angular/platform-browser": "~8.1.0",
     "@angular/platform-browser-dynamic": "~8.1.0",
+    "@angular/pwa": "^0.801.0",
     "@angular/router": "~8.1.0",
+    "@angular/service-worker": "~8.1.0",
     "@fortawesome/fontawesome-free": "^5.9.0",
     "bootstrap": "^4.3.1",
     "jquery": "^3.4.1",
