--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "ng serve",
     "build": "ng build --prod",
     "buildgit": "ng build --prod",
+    "buildshell": "ng run AwesomeJSDevId:app-shell -c production",
     "buildserve": "cd dist/AwesomeJSDevId && live-server --port=4200 --host=localhost --entry-file=/index.html",
     "test": "ng test",
     "lint": "ng lint",
@@ -20,6 +21,7 @@
     "@angular/forms": "~8.1.0",
     "@angular/platform-browser": "~8.1.0",
     "@angular/platform-browser-dynamic": "~8.1.0",
+    "@angular/platform-server": "~8.1.0",
     "@angular/pwa": "^0.801.0",
     "@angular/router": "~8.1.0",
     "@angular/service-worker": "~8.1.0",
