Pembaruan paket aplikasi

--- a/package.json
+++ b/package.json
@@ -14,18 +14,18 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^8.1.2",
-    "@angular/common": "^8.1.2",
-    "@angular/compiler": "^8.1.2",
-    "@angular/core": "^8.1.2",
-    "@angular/forms": "^8.1.2",
-    "@angular/platform-browser": "^8.1.2",
-    "@angular/platform-browser-dynamic": "^8.1.2",
-    "@angular/platform-server": "^8.1.2",
-    "@angular/pwa": "^0.801.2",
-    "@angular/router": "^8.1.2",
-    "@angular/service-worker": "^8.1.2",
-    "@fortawesome/fontawesome-free": "^5.9.0",
+    "@angular/animations": "^8.2.7",
+    "@angular/common": "^8.2.7",
+    "@angular/compiler": "^8.2.7",
+    "@angular/core": "^8.2.7",
+    "@angular/forms": "^8.2.7",
+    "@angular/platform-browser": "^8.2.7",
+    "@angular/platform-browser-dynamic": "^8.2.7",
+    "@angular/platform-server": "^8.2.7",
+    "@angular/pwa": "^0.801.3",
+    "@angular/router": "^8.2.7",
+    "@angular/service-worker": "^8.2.7",
+    "@fortawesome/fontawesome-free": "^5.11.1",
     "bootstrap": "^4.3.1",
     "jquery": "^3.4.1",
     "rxjs": "~6.4.0",
@@ -33,19 +33,19 @@
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.801.2",
-    "@angular/cli": "^8.1.2",
-    "@angular/compiler-cli": "^8.1.2",
-    "@angular/language-service": "^8.1.2",
-    "@types/jasmine": "~3.3.8",
+    "@angular-devkit/build-angular": "^0.801.3",
+    "@angular/cli": "^8.3.5",
+    "@angular/compiler-cli": "^8.2.7",
+    "@angular/language-service": "^8.2.7",
+    "@types/jasmine": "^3.3.16",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
-    "codelyzer": "^5.0.0",
+    "codelyzer": "^5.1.1",
     "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~4.1.0",
     "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "~2.0.1",
+    "karma-coverage-istanbul-reporter": "^2.0.6",
     "karma-jasmine": "~2.0.1",
     "karma-jasmine-html-reporter": "^1.4.0",
     "live-server": "^1.2.1",
