--- a/package.json
+++ b/package.json
@@ -14,19 +14,19 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^8.2.7",
-    "@angular/common": "^8.2.7",
-    "@angular/compiler": "^8.2.7",
-    "@angular/core": "^8.2.7",
-    "@angular/forms": "^8.2.7",
-    "@angular/platform-browser": "^8.2.7",
-    "@angular/platform-browser-dynamic": "^8.2.7",
-    "@angular/platform-server": "^8.2.7",
+    "@angular/animations": "^8.2.14",
+    "@angular/common": "^8.2.14",
+    "@angular/compiler": "^8.2.14",
+    "@angular/core": "^8.2.14",
+    "@angular/forms": "^8.2.14",
+    "@angular/platform-browser": "^8.2.14",
+    "@angular/platform-browser-dynamic": "^8.2.14",
+    "@angular/platform-server": "^8.2.14",
     "@angular/pwa": "^0.801.3",
-    "@angular/router": "^8.2.7",
-    "@angular/service-worker": "^8.2.7",
-    "@fortawesome/fontawesome-free": "^5.11.1",
-    "bootstrap": "^4.3.1",
+    "@angular/router": "^8.2.14",
+    "@angular/service-worker": "^8.2.14",
+    "@fortawesome/fontawesome-free": "^5.11.2",
+    "bootstrap": "^4.4.1",
     "jquery": "^3.4.1",
     "rxjs": "~6.4.0",
     "tslib": "^1.9.0",
@@ -34,18 +34,18 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^0.801.3",
-    "@angular/cli": "^8.3.5",
-    "@angular/compiler-cli": "^8.2.7",
-    "@angular/language-service": "^8.2.7",
-    "@types/jasmine": "^3.3.16",
-    "@types/jasminewd2": "~2.0.3",
+    "@angular/cli": "^8.3.20",
+    "@angular/compiler-cli": "^8.2.14",
+    "@angular/language-service": "^8.2.14",
+    "@types/jasmine": "^3.5.0",
+    "@types/jasminewd2": "^2.0.8",
     "@types/node": "~8.9.4",
-    "codelyzer": "^5.1.1",
+    "codelyzer": "^5.2.0",
     "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~4.1.0",
     "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "^2.0.6",
+    "karma-coverage-istanbul-reporter": "^2.1.1",
     "karma-jasmine": "~2.0.1",
     "karma-jasmine-html-reporter": "^1.4.0",
     "live-server": "^1.2.1",
